# src/controllers/routeController.js
@@ -1,4 +1,4 @@
-import {getAllRoutes, getRouteById} from '../services/routeService.js';
+import {getAllRoutes, getRouteById, deleteRoute, createRoute, updateRoute} from '../services/routeService.js';
 
 export async function getAllRoutesHandler(req, res) {
     let routes = await getAllRoutes();
@@ -11,16 +11,21 @@ export async function getRouteByIdHandler(req, res) {
     res.status(200).json(route);
 }
 
-export async function createRouteHandler(req, res) {
-    const {name, price, shippingAddress} = req.body;
-    const newRoute = await createRoute({name, price, shippingAddress, userId: req.user.id});
-    res.status(201).json(newRoute);
+export async function createRouteHandler(req, res, next) {
+    try {
+        const {name, street} = req.body;
+        const newRoute = await createRoute({name, street, userId: req.user.id});
+        res.status(201).json(newRoute);
+    }
+    catch (error) {
+        next(error);
+    }
 }
 
 export async function updateRouteHandler(req, res){
     const id = parseInt(req.params.id);
-    const {name, price, shippingAddress} = req.body;
-    const updatedRoute = await updatedRoute(id, {name, price, shippingAddress});
+    const {name, street} = req.body;
+    const updatedRoute = await updateRoute(id, {name, street});
     res.status(200).json(updatedRoute);
 }
 
